# universal-ads-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  env.template  local_openapi.json  pyproject.toml  requirements.txt  setup.py
examples/: audience_usage.py  basic_usage.py  media_upload.py  reporting.py  segment_usage.py
tests/: README.md  __init__.py  comprehensive_test.py  test_auth.py  test_campaign.py  test_template.py  test_tpa_list_filters.py
universal_ads_sdk/: __init__.py  auth.py  client.py
universal_ads_sdk/common/: __init__.py  archive_types.py  exceptions.py  types.py
universal_ads_sdk/endpoints/: __init__.py  _base.py  ad.py  adset.py  archive_job.py  audience.py  campaign.py  creative.py  me.py  media.py  pixel.py  report.py  segment.py
